wii/log.txt
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii
powerpc-eabi-gcc -MMD -MP -MF /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/build/exi.d -g -O2 -Wall -fPIC -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float   -I/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/build -I/opt/devkitpro/libogc/include -c /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/source/exi.c -o exi.o 
powerpc-eabi-gcc -MMD -MP -MF /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/build/main.d -g -O2 -Wall -fPIC -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float   -I/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/build -I/opt/devkitpro/libogc/include -c /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/source/main.c -o main.o 
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/source/main.c: In function 'initGameFiles':
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/source/main.c:175:9: warning: 'strncpy' specified bound 512 equals destination size [-Wstringop-truncation]
  175 |         strncpy(gameRootDir, appPath, sizeof(gameRootDir));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
powerpc-eabi-gcc  exi.o main.o -g -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -Wl,-Map,boot.elf.map -L/opt/devkitpro/libogc/lib/wii  -lfat -logc -lm -o /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/boot.elf
elf2dol /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/boot.elf /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/boot/boot.dol
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii
powerpc-eabi-gcc -MMD -MP -MF /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/build/alloc.d -g -O2 -Wall -fPIC -mno-toc -msdata=data -mregnames -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -I../source/include -ffile-prefix-map=/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/build=. -c /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/alloc.c -o alloc.o 
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/alloc.c: In function 'dumpGameHeaps':
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/alloc.c:13:39: warning: format '%X' expects argument of type 'unsigned int', but argument 5 has type 'void *' [-Wformat=]
   13 |                 printf("%2d|%5d|%c|%08X|%8X|%08X|%08X|%08X\n",
      |                                    ~~~^
      |                                       |
      |                                       unsigned int
      |                                    %08p
......
   16 |                     entry->loc, entry->size, entry->loc+entry->size,
      |                     ~~~~~~~~~~         
      |                          |
      |                          void *
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/alloc.c:13:48: warning: format '%X' expects argument of type 'unsigned int', but argument 7 has type 'void *' [-Wformat=]
   13 |                 printf("%2d|%5d|%c|%08X|%8X|%08X|%08X|%08X\n",
      |                                             ~~~^
      |                                                |
      |                                                unsigned int
      |                                             %08p
......
   16 |                     entry->loc, entry->size, entry->loc+entry->size,
      |                                              ~~~~~~~~~~~~~~~~~~~~~~
      |                                                        |
      |                                                        void *
powerpc-eabi-gcc -MMD -MP -MF /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/build/argv.d -g -O2 -Wall -fPIC -mno-toc -msdata=data -mregnames -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -I../source/include -ffile-prefix-map=/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/build=. -c /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/argv.c -o argv.o 
powerpc-eabi-gcc -MMD -MP -MF /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/build/audiopatch.d -g -O2 -Wall -fPIC -mno-toc -msdata=data -mregnames -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -I../source/include -ffile-prefix-map=/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/build=. -c /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiopatch.c -o audiopatch.o 
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiopatch.c: In function 'doDspPatch':
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiopatch.c:94:18: warning: passing argument 1 of 'DCStoreRange' makes pointer from integer without a cast [-Wint-conversion]
   94 |     DCStoreRange(0x80330840, 0x2000);
      |                  ^~~~~~~~~~
      |                  |
      |                  unsigned int
In file included from ../source/include/main.h:51,
                 from /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiopatch.c:1:
../source/include/cache.h:145:25: note: expected 'void *' but argument is of type 'unsigned int'
  145 | void DCStoreRange(void *startaddress,u32 len);
      |                   ~~~~~~^~~~~~~~~~~~
powerpc-eabi-gcc -MMD -MP -MF /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/build/audiostream.d -g -O2 -Wall -fPIC -mno-toc -msdata=data -mregnames -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -I../source/include -ffile-prefix-map=/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/build=. -c /mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiostream.c -o audiostream.o 
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiostream.c:18:48: error: expected ';', ',' or ')' before '&' token
   18 | static s16 ADPDecodeSample(s32 bits, s32 q, s32& hist1,
      |                                                ^
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiostream.c: In function 'DecodeBlock':
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiostream.c:61:34: warning: implicit declaration of function 'ADPDecodeSample' [-Wimplicit-function-declaration]
   61 |                 pcm[i * 2]     = ADPDecodeSample(adpcm[i + (ONE_BLOCK_SIZE - SAMPLES_PER_BLOCK)] & 0xf, adpcm[0], histl1, histl2);
      |                                  ^~~~~~~~~~~~~~~
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiostream.c:61:61: error: 'ONE_BLOCK_SIZE' undeclared (first use in this function)
   61 |                 pcm[i * 2]     = ADPDecodeSample(adpcm[i + (ONE_BLOCK_SIZE - SAMPLES_PER_BLOCK)] & 0xf, adpcm[0], histl1, histl2);
      |                                                             ^~~~~~~~~~~~~~
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii/main/source/audiostream.c:61:61: note: each undeclared identifier is reported only once for each function it appears in
make[1]: *** [/opt/devkitpro/devkitPPC//base_rules:18: audiostream.o] Error 1
make: *** [Makefile:113: build] Error 2
/mnt/guilmon/home/rena/projects/games/hax/sfa/amethyst/wii
